# os_template

./: .ocamlformat  Makefile.db  Makefile.options  Makefile.os  Makefile.style  README.md  demo.eliom  demo_cache.eliom  demo_calendar.eliom  demo_carousel1.eliom  demo_carousel2.eliom  demo_carousel3.eliom  demo_forms.eliom  demo_i18n.eliom  demo_links.eliom  demo_notif.eliom  demo_pagetransition.eliom  demo_pgocaml.eliom  demo_popup.eliom  demo_pulltorefresh.eliom  demo_react.eliom  demo_ref.eliom  demo_rpc.eliom  demo_services.eliom  demo_spinner.eliom  demo_timepicker.eliom  demo_tips.eliom  demo_tongue.eliom  demo_tools.eliom  demo_users.eliom  dune  dune.config  project_name.conf.in  project_name.eliom  project_name.opam  project_name.sql  project_name_base.eliom  project_name_config.eliom  project_name_container.eliom  project_name_container.eliomi  (+16 more)
assets/: project_name_Demo_i18n.tsv
client/: dune
mobile/: eliom_loader.ml
sass/: os.scss
tools/: dune  gen_dune.ml
