(executable
    (name eliom_ppx_client)
    (modes native)
    (modules eliom_ppx_client)
    (preprocess (pps lwt_ppx))
    (libraries ocsigen-ppx-rpc js_of_ocaml-ppx_deriving_json eliom.ppx.client))

(rule
  (action (with-stdout-to eliom_ppx_client.ml
            (echo "let () = Ppxlib.Driver.standalone ()"))))
